--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div class="base-body max-width"><section id="header" class="header max-body-width"><p><a class="home" href="/"><span class="site-name">9r0k Site</span></a></p></section><div id="content" class="flex-body max-body-width"><ul class="note-list"><li><a class="note" href="/blog/golang%E5%8F%98%E9%87%8F%E5%88%9D%E5%A7%8B%E5%8C%96/">
 <p class="note-title">Golang变量初始化</p>
 <p class="note-date">2020-01-10</p>
-<p class="note-content">var = var 变量名字 类型 = 表达式 = 如果初始化表达式被省略，那么将用零值初始化该变量。 数值类型变量对应的零值是0 布尔类型变量对应的零值是false 字…</p></a><p class="note-labels"><a class="article-category" href="/categories/go/"><span class="hashtag">#</span>Go</a><a class="article-tag" href="/tags/go/"><span class="hashtag">#</span>Go</a></p></li><li><a class="note" href="/blog/k8s%E5%A4%96%E9%83%A8%E6%B5%81%E9%87%8F%E5%BC%95%E5%85%A5/">
+<p class="note-content">var var 变量名字 类型 = 表达式 如果初始化表达式被省略，那么将用零值初始化该变量。 数值类型变量对应的零值是 0 布尔类型变量对应的零值是 false 字符串类型对应…</p></a><p class="note-labels"><a class="article-category" href="/categories/go/"><span class="hashtag">#</span>Go</a><a class="article-tag" href="/tags/go/"><span class="hashtag">#</span>Go</a></p></li><li><a class="note" href="/blog/k8s%E5%A4%96%E9%83%A8%E6%B5%81%E9%87%8F%E5%BC%95%E5%85%A5/">
 <p class="note-title">K8S外部流量引入集群的几种方式总结</p>
 <p class="note-date">2019-12-28</p>
 <p class="note-content">通过Pod hostPort 相当于docker run -p 8081:8080,不用创建服务,因此端口只在容器运行的vm上监听直接将容器的端口与所调度的节点上的端口路…</p></a><p class="note-labels"><a class="article-category" href="/categories/k8s/"><span class="hashtag">#</span>k8s</a><a class="article-tag" href="/tags/k8s/"><span class="hashtag">#</span>k8s</a><a class="article-tag" href="/tags/kubernetes/"><span class="hashtag">#</span>kubernetes</a></p></li><li><a class="note" href="/blog/git%E5%8D%8F%E8%AE%AE/">
